--- a/src/Makefile
+++ b/src/Makefile
@@ -57,7 +57,7 @@ FTSPRandomIntegration: $(BIN)/toric3DFTSingleSpin.o $(BIN)/FTSPRandomIntegration
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -o $(BIN)/$@ $(BIN)/mainFTSPRandomIntegration.o $(BIN)/FTSPRandomIntegration.o $(BIN)/toric3DFTSingleSpin.o $(LDFLAGS) $(LIBS) $(LINKFLAG)
 
 FTSPMembraneRandomIntegration: $(BIN)/site.o $(BIN)/toric3DFTMembraneSingleSpin.o $(BIN)/FTSPMembraneRandomIntegration.o $(BIN)/mainFTSPMembraneRandomIntegration.o
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -o $(BIN)/$@ $(BIN)/site.o $(BIN)/mainFTSPMembraneRandomIntegration.o $(BIN)/FTSPMembraneRandomIntegration.o $(BIN)/toric3DFTMembraneSingleSpin.o $(LDFLAGS) $(LIBS) $(LINKFLAG)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -o $(BIN)/$@ $(BIN)/site.o $(BIN)/mainFTSPMembraneRandomIntegration.o $(BIN)/FTSPMembraneRandomIntegration.o $(BIN)/toric3DFTMembraneSingleSpin.o $(LDFLAGS) $(LIBS) $(LINKFLAG) $(COMFLAG)
 
 clean:
 	$(RM) $(RMFLAGS) $(BIN)/*.o FTRandomIntegration FTRandomSwitch toric3DFiniteTemp FTSPRandomIntegration FTSPMembraneRandomIntegration FTSPRandomSwitch toric3DFTSingleSpin toric3DFTMembraneSingleSpin
