--- a/src/Makefile
+++ b/src/Makefile
@@ -11,22 +11,25 @@ host=$(shell hostname)
 
 ifeq ($(host), l29)
 	ALPS_ROOT = /scratch/alps
+	include $(ALPS_ROOT)/share/alps/include.mk
 	SRC = /home/helmes/Work/toric_code_3D_ALPS/src
 	BIN = /home/helmes/Work/toric_code_3D_ALPS/bin
 endif
 ifeq ($(host), johannes-thinkpad)
 	ALPS_ROOT = /opt/alps
+	include $(ALPS_ROOT)/share/alps/include.mk
 	SRC = /home/johannes/Work/toric_code_3D_ALPS/src
 	BIN = /home/johannes/Work/toric_code_3D_ALPS/bin
+	CXX = /usr/bin/c++
 endif
 ifeq ($(host), cheops0)
 	ALPS_ROOT = /projects/ag-trebst/alps/alps-svn-intel-intelmpi
+	include $(ALPS_ROOT)/share/alps/include.mk
 	SRC = /home/jhelmes/Work/toric_code_3D_ALPS/src
 	BIN = /home/jhelmes/Work/toric_code_3D_ALPS/bin
 endif
 
 
-include $(ALPS_ROOT)/share/alps/include.mk
 
 ifeq ($(host), l29)
 	CXXFLAGS = -O2 -DNDEBUG -march=corei7 -std=c++0x 
@@ -38,7 +41,7 @@ ifeq ($(host), cheops0)
 	CXXFLAGS = -O2 -DNDEBUG -march=native -std=c++0x 
 endif
 
-all: FTSPRandomIntegration FTSPRandomSwitch FTSPMembraneRandomIntegration
+all: toriccode
 	@echo $(host)
 	@echo $(BIN)
 
@@ -56,8 +59,11 @@ FTSPRandomSwitch: $(BIN)/toric3DFTSingleSpin.o $(BIN)/FTSPRandomSwitch.o $(BIN)/
 FTSPRandomIntegration: $(BIN)/toric3DFTSingleSpin.o $(BIN)/FTSPRandomIntegration.o $(BIN)/mainFTSPRandomIntegration.o
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -o $(BIN)/$@ $(BIN)/mainFTSPRandomIntegration.o $(BIN)/FTSPRandomIntegration.o $(BIN)/toric3DFTSingleSpin.o $(LDFLAGS) $(LIBS) $(LINKFLAG)
 
-FTSPMembraneRandomIntegration: $(BIN)/site.o $(BIN)/updater.o $(BIN)/toric3DFTMembraneSingleSpin.o $(BIN)/FTSPMembraneRandomIntegration.o $(BIN)/mainFTSPMembraneRandomIntegration.o
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -o $(BIN)/$@ $(BIN)/site.o $(BIN)/updater.o $(BIN)/mainFTSPMembraneRandomIntegration.o $(BIN)/FTSPMembraneRandomIntegration.o $(BIN)/toric3DFTMembraneSingleSpin.o $(LDFLAGS) $(LIBS) $(LINKFLAG) $(COMFLAG)
+FTSPMembraneRandomIntegration: $(BIN)/site.o $(BIN)/measurer.o $(BIN)/updater.o $(BIN)/toric3DFTMembraneSingleSpin.o $(BIN)/FTSPMembraneRandomIntegration.o $(BIN)/mainFTSPMembraneRandomIntegration.o
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -o $(BIN)/$@ $(BIN)/site.o $(BIN)/measurer.o $(BIN)/updater.o $(BIN)/mainFTSPMembraneRandomIntegration.o $(BIN)/FTSPMembraneRandomIntegration.o $(BIN)/toric3DFTMembraneSingleSpin.o $(LDFLAGS) $(LIBS) $(LINKFLAG) $(COMFLAG)
+
+toriccode: $(BIN)/site.o $(BIN)/measurer.o $(BIN)/updater.o $(BIN)/toriccode.o 
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -o $(BIN)/$@ $(BIN)/site.o $(BIN)/measurer.o $(BIN)/updater.o $(BIN)/toriccode.o $(LDFLAGS) $(LIBS) $(LINKFLAG) $(COMFLAG)
 
 clean:
 	$(RM) $(RMFLAGS) $(BIN)/*.o FTRandomIntegration FTRandomSwitch toric3DFiniteTemp FTSPRandomIntegration FTSPMembraneRandomIntegration FTSPRandomSwitch toric3DFTSingleSpin toric3DFTMembraneSingleSpin
